--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,8 @@ version: 0.2
 phases:
   pre_build:
     commands:
-     - chmod 400 kavitha.pem
+     - chmod 400 keypair.pem
       - yum -y install openssh-server openssh-clients
       - systemctl enable sshd.service
-      - ssh -T -o StrictHostKeyChecking=no -i kavitha.pem ec2-user@ec2-52-73-30-167.compute-1.amazonaws.com
-      - scp -i kavitha.pem test ec2-user@ec2-52-73-30-167.compute-1.amazonaws.com:./testing
+      - ssh -T -o StrictHostKeyChecking=no -i keypair.pem ec2-3-83-96-126.compute-1.amazonaws.com
+      - scp -i keypair.pem test ec2-3-83-96-126.compute-1.amazonaws.com:./testing
