--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,11 @@
-version: 0.2
+# version: 0.2
 
 
-phases:
-  build:
-    commands:
-      - chmod 400 keypair.pem
-      - yum -y install openssh-server openssh-clients
-      - systemctl enable sshd.service
-      - ssh -T -o StrictHostKeyChecking=no -i keypair.pem ec2-3-83-96-126.compute-1.amazonaws.com
-      - scp -i keypair.pem test ec2-3-83-96-126.compute-1.amazonaws.com:./testing
+# phases:
+#   build:
+#     commands:
+#       - chmod 400 keypair.pem
+#       - yum -y install openssh-server openssh-clients
+#       - systemctl enable sshd.service
+#       - ssh -T -o StrictHostKeyChecking=no -i keypair.pem ec2-3-83-96-126.compute-1.amazonaws.com
+#       - scp -i keypair.pem test ec2-3-83-96-126.compute-1.amazonaws.com:./testing
